# openneuro_glmfitlins

./: .gitignore  LICENSE  README.md  diagram.mmd  path_config.json  pyproject.toml  setup_uv.sh
.github/ISSUE_TEMPLATE/: contrast-issue.md  events-modification-issue.md  model-specification-issue.md
.github/workflows/: mermaid.yml
docs/: workflow.mmd
scripts/: 1_download_data_create_details.sh  2_modify_boldeventfiles.sh  3_create_spec_file.sh  4_run_fitlins.sh  5_run_groupreport.sh  auto_model.py  code-review.md  create_mod-specs.py  create_readme.py  download_data.sh  example_fitlins.json  example_mod-specs.json  file_exclusions.json  get_openneuro-data.py  groupmap_report.py  modify_events.py  prep_boldevents.py  run_mod-fitlins.sh  run_nilearn.py  running_model.sh  study_simple-details.py  transformations.ipynb  troubleshoot_bids-stats-model.ipynb  util.py  utils.py
scripts/cluster_jobs/: copy.sh  recreate_fmriprep.sh  run_fitlins.sh  run_nilearn.sh  sing_fitlins.sh
scripts/jupyter_notebooks/: transformations.ipynb
scripts/logs/: fitlins.59499078_1.err  fitlins.59499078_1.out
scripts/nilearn_pilots/: model_utils.py  run_firstfixed.py  run_grp.py  study_req.json
scripts/prep_report_py/: create_mod_specs.py  create_readme.py  example_mod-specs.json  file_exclusions.json  get_openneuro_data.py  groupmap_report.py  modify_events.py  prep_boldevents.py  study_simple-details.py  study_simple_details.py  utils.py
src/openneuro_glmfitlins/: __init__.py
statsmodel_specs/: ds000001_basic-details.json  ds000001_contrasts.json  ds000001_specs.json  ds000001_subjects.json  ds000102_basic-details.json  ds000102_contrasts.json  ds000102_specs.json
statsmodel_specs/ds000001/: README.md  ds000001-balloonanalogrisktask_contrasts.json  ds000001-balloonanalogrisktask_specs.json  ds000001-balloonanalogrisktask_subjects.json  ds000001_basic-details.json  group_bold.tsv
statsmodel_specs/ds000002/: README.md  ds000002-mixedeventrelatedprobe_specs.json  (+8 more)
(+361 files in other folders)
