[project]
name = "openneuro-glmfitlins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Demidenko", email = "demidenko.michael@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
openneuro-glmfitlins = "openneuro_glmfitlins:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
