[project]
name = "openneuro-glmfitlins"
version = "0.1.0"
description = "A tool for downloading and analyzing OpenNeuro datasets with BIDS Stats Models: FitLins"
readme = "README.md"
authors = [
    { name = "Michael Demidenko", email = "demidenko.michael@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pybids>=0.15.0",
    "datalad>=0.16.0",
    "nilearn>=0.9.2",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "nbformat>=5.8.0",
    "IPython>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "awscli",
    "argparse"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[project.scripts]
openneuro-glmfitlins = "openneuro_glmfitlins:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
